[package]
name    = "led_bargraph"
version = "0.1.0"
authors = ["Jason Peacock <jason@jasonpeacock.com>"]
description = "A Rust library & application for the Adafruit Bi-Color (Red/Green) 24-Bar Bargraph w/I2C Backpack Kit."
keywords = ["led", "gpio", "driver", "bargraph", "display"]
categories = ["hardware-support"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasonpeacock/led-bargraph"
readme = "README.md"

[dependencies]
ansi_term     = "0.11.0"
docopt        = "1.0.2"
ht16k33       = "0.1.0"
i2cdev        = "0.4.0"
serde         = "1.0.80"
serde_derive  = "1.0.80"
slog          = "2.4.1"
slog-async    = "2.3.0"
slog-stdlog   = "3.0.4-pre"
slog-term     = "2.4.0"
slog-scope    = "4.0.1"
