[package]
name    = "led_bargraph"
version = "0.2.1"
authors = ["Jason Peacock <jason@jasonpeacock.com>"]
description = "A Rust library & application for the Adafruit Bi-Color (Red/Green) 24-Bar Bargraph w/I2C Backpack Kit."
keywords = ["led", "driver", "display", "embedded-hal"]
categories = ["hardware-support"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasonpeacock/led-bargraph"
readme = "README.md"
documentation = "https://docs.rs/led_bargraph"

# Don't include CI scripts in the package.
exclude = ["/ci/*"]

[dependencies]
ansi_term     = "0.11.0"
docopt        = "1.0.2"
embedded-hal  = "0.2.2"
ht16k33       = "0.3.0"
num-integer   = "0.1.39"
serde         = "1.0.80"
serde_derive  = "1.0.80"
slog          = {version = "2.4.1", features = ["max_level_trace"]}
slog-async    = "2.3.0"
slog-stdlog   = "3.0.4-pre"
slog-term     = "2.4.0"
slog-scope    = "4.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.2.2"

[badges]
is-it-maintained-issue-resolution = { repository = "jasonpeacock/led-bargraph" }
is-it-maintained-open-issues = { repository = "jasonpeacock/led-bargraph" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "jasonpeacock/led-bargraph", branch = "master" }
